# distributed_algorithms_student_projects

./: PRUS Ocene.xlsx  README.md
t1_1/emina demirovic/: komentari.md
t1_2/marija ninkovic/ros2-pbft-emergency-stop/src/pbft_emergency_stop_interfaces/: CMakeLists.txt  package.xml
t1_2/marija ninkovic/ros2-pbft-emergency-stop/src/pbft_emergency_stop_interfaces/msg/: NewView.msg  PBFTDecision.msg  PBFTMessage.msg  ReplicaStatus.msg  ViewChange.msg
t1_2/marija ninkovic/ros2-pbft-emergency-stop/src/pbft_emergency_stop_simulator/: package.xml  setup.cfg  setup.py
t1_2/marija ninkovic/ros2-pbft-emergency-stop/src/pbft_emergency_stop_simulator/config/: scenario_catalog.yaml
t1_2/marija ninkovic/ros2-pbft-emergency-stop/src/pbft_emergency_stop_simulator/launch/: pbft_bad_digest_scenario.launch.py  pbft_configurable.launch.py  pbft_custom_demo.launch.py  pbft_delayed_commit_scenario.launch.py  pbft_delayed_prepare_scenario.launch.py  pbft_duplicate_scenario.launch.py  pbft_early_commit_scenario.launch.py  pbft_equivocation_scenario.launch.py  pbft_insufficient_quorum_scenario.launch.py  pbft_insufficient_view_change_quorum_scenario.launch.py  pbft_invalid_sender_scenario.launch.py  pbft_manual_view_change_scenario.launch.py  pbft_performance_monitor.launch.py  pbft_prepared_new_view_scenario.launch.py  pbft_prepared_view_change_scenario.launch.py  pbft_primary_timeout_scenario.launch.py  pbft_progress_timeout_normal_scenario.launch.py  pbft_replicas.launch.py  pbft_silent_scenario.launch.py  pbft_simulator.launch.py  pbft_skip_commit_scenario.launch.py  pbft_skip_prepare_scenario.launch.py  pbft_wrong_sequence_scenario.launch.py  pbft_wrong_value_scenario.launch.py  pbft_wrong_view_scenario.launch.py
(+411 files in other folders)
