<?xml version="1.0"?>
<package format="3">
  <name>pbft_emergency_stop_interfaces</name>
  <version>0.0.1</version>

  <description>
    Custom ROS 2 message interfaces for the PBFT emergency stop simulator.
  </description>

  <maintainer email="maja@todo.todo">Maja</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
