<?xml version="1.0"?>
<package format="3">
  <name>pbft_emergency_stop_simulator</name>
  <version>0.0.2</version>

  <description>
    ROS 2 simulator of PBFT consensus for an emergency-stop decision.
  </description>

  <maintainer email="maja@todo.todo">Maja</maintainer>
  <license>Apache-2.0</license>

  

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>pbft_emergency_stop_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
